# texteditor

./: CMakeLists.txt  PKGBUILD  README.md  cutefish-texteditor.desktop  matsya-texteditor.desktop
qml/: TextEditor.qml  main.qml
src/: main.cpp
